syntax = "proto3";

package com.coralogixapis.alerts.v3;

import "google/protobuf/descriptor.proto";
import "google/protobuf/wrappers.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

enum NotifyOn {
  NOTIFY_ON_TRIGGERED_ONLY_UNSPECIFIED = 0;
  NOTIFY_ON_TRIGGERED_AND_RESOLVED = 1;
}

message TimeDuration {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Time duration"
      description: "Configuration for time duration"
      required: [
        "duration",
        "unit"
      ]
    }
  };
  google.protobuf.UInt64Value duration = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "The duration value"
    example: "60"
  }];
  DurationUnit unit = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "The unit of the duration"
    example: "\"DURATION_UNIT_HOURS\""
  }];
}

enum DurationUnit {
  DURATION_UNIT_UNSPECIFIED = 0;
  DURATION_UNIT_HOURS = 1;
}

enum BooleanOperator {
  BOOLEAN_OPERATOR_AND_UNSPECIFIED = 0;
  BOOLEAN_OPERATOR_OR = 1;
}

enum OrderByDirection {
  ORDER_BY_DIRECTION_ASC_OR_UNSPECIFIED = 0;
  ORDER_BY_DIRECTION_DESC = 1;
}

enum OrderByFields {
  ORDER_BY_FIELDS_UNSPECIFIED = 0;
  ORDER_BY_FIELDS_NAME = 1;
  ORDER_BY_FIELDS_ID = 2;
  ORDER_BY_FIELDS_SEVERITY = 3;
  ORDER_BY_FIELDS_CREATED_TIME = 4;
  ORDER_BY_FIELDS_UPDATED_TIME = 5;
  ORDER_BY_FIELDS_LAST_TRIGGERED = 6;
}

message OrderByList {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Order by list"
      description: "List of fields to order by"
      required: ["order_bys"]
    }
  };
  repeated OrderBy order_bys = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "Order by fields"
    min_items: 0
  }];
}

message OrderBy {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Order by"
      description: "A data structure that specifies the field and direction for ordering query results"
      required: [
        "field_name",
        "direction"
      ]
    }
  };
  OrderByFields field_name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "Field name to order by"
    example: "\"ORDER_BY_FIELDS_UPDATED_TIME\""
  }];
  OrderByDirection direction = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "Direction for ordering"
    example: "\"ORDER_BY_DIRECTION_ASC_OR_UNSPECIFIED\""
  }];
}
